Switched to eslint for formatting, enabled format on save

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,13 +7,9 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
   "cSpell.enabled": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
-    "source.organizeImports": true
-  },
-  "[typescriptreact]": {
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "source.fixAll.eslint": true
   },
   "sort-imports.languages": ["javascript", "typescript"]
 }
