--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "target": "ES2020",
         "module": "ES6",
         "moduleResolution": "node",
+        "resolveJsonModule": true,
         "baseUrl": "./",
         "jsx": "react",
         "paths": {
