--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.1",
     "@types/js-cookie": "^2.2.6",
+    "@types/mustache": "^4.1.2",
     "@types/react-highlight-words": "^0.16.2",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.14.0",
@@ -74,6 +75,7 @@
     "jest-fetch-mock": "^3.0.3",
     "js-cookie": "^2.2.1",
     "mousetrap": "^1.6.5",
+    "mustache": "^4.2.0",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
