Added SDK generator

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
             ],
             "@modules/*": [
                 "src/ui/modules/*"
+            ],
+            "@sdk/*": [
+                "src/sdk/generated_ts/*"
             ]
         }
     },
