--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "develop:electron": "yarn compile:electron && electron dist/electron/index.js",
     "compile": "concurrently 'yarn compile:ui' 'yarn compile:electron'",
     "develop": "concurrently 'yarn develop:ui' 'yarn develop:electron'",
+    "generate:sdk": "node_modules/.bin/tsc -p src/sdk && node src/sdk/dist/index.js",
     "test": "jest --setupFiles dotenv/config --verbose",
     "test:e2e": "cypress open"
   },
@@ -55,6 +56,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
+    "@apidevtools/swagger-parser": "^10.0.3",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.1",
     "@types/js-cookie": "^2.2.6",
@@ -76,6 +78,7 @@
     "js-cookie": "^2.2.1",
     "mousetrap": "^1.6.5",
     "mustache": "^4.2.0",
+    "openapi-types": "^10.0.0",
     "path-browserify": "^1.0.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -87,6 +90,7 @@
     "react-router-dom": "^5.2.0",
     "react-syntax-highlighter": "^15.4.3",
     "react-test-renderer": "^17.0.2",
-    "recharts": "^2.0.9"
+    "recharts": "^2.0.9",
+    "ts-morph": "^13.0.2"
   }
 }
