--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@apidevtools/swagger-parser": "^10.0.3",
     "@testing-library/react": "^11.2.6",
     "@testing-library/react-hooks": "^5.1.1",
+    "@ts-morph/common": "^0.12.2",
     "@types/js-cookie": "^2.2.6",
     "@types/mustache": "^4.1.2",
     "@types/react-highlight-words": "^0.16.2",
