--- a/package.json
+++ b/package.json
@@ -65,12 +65,13 @@
     "@types/react-highlight-words": "^0.16.2",
     "@types/react-router-dom": "^5.1.7",
     "antd": "^4.14.0",
+    "browserslist": "^4.19.1",
     "classnames": "^2.3.0",
     "dayjs": "^1.10.6",
     "dotenv": "^8.2.0",
     "dotenv-safe": "^8.2.0",
     "dotenv-webpack": "^7.0.2",
-    "electron": "^12.0.0",
+    "electron": "^16.0.6",
     "electron-is-dev": "^2.0.0",
     "electron-store": "^7.0.2",
     "filesize": "^6.3.0",
