--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
     "ts-jest": "^26.5.3",
     "ts-loader": "^8.0.18",
     "typescript": "4.1.5",
-    "webpack": "^5.25.0",
-    "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^4.0.0-beta.0"
+    "webpack": "^5.69.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.7.4"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
