--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "antd": "^4.14.0",
     "browserslist": "^4.19.1",
     "classnames": "^2.3.0",
+    "comlink": "^4.3.1",
     "dayjs": "^1.10.6",
     "dotenv": "^8.2.0",
     "dotenv-safe": "^8.2.0",
