--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "react-syntax-highlighter": "^15.4.3",
     "react-test-renderer": "^17.0.2",
     "recharts": "^2.0.9",
+    "trueblocks-sdk": "^0.45.15",
     "ts-morph": "^13.0.2"
   }
 }
